examples/invalid/program28.c
int main() {
    int x;
    x = 5;
    x = x + "text";
    return x;
}

